<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_height="match_parent">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/progress_bar_page_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:indeterminate="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="visible"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_main"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_result"
            android:visibility="invisible"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/text_view_status"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/fail"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/secondary_text"
                android:gravity="center"
                android:padding="8dp"
                app:layout_constraintHeight_percent="0.4"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
            <TextView
                app:layout_constraintTop_toBottomOf="@+id/text_view_status"
                android:text="12/50"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/secondary_text"
                android:gravity="center"
                android:padding="8dp"
                android:id="@+id/text_view_score"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

            <Button
                android:id="@+id/button_restart"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="8dp"
                app:backgroundTint="@null"
                android:background="@drawable/bg_button_answer"
                android:layout_margin="8dp"
                android:text="@string/restart"
                android:textColor="@color/primary_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/button_back"
                android:layout_marginRight="8dp"
                android:text="@string/go_to_main"
                android:layout_marginLeft="8dp"
                app:backgroundTint="@null"
                android:textColor="@color/primary_text"
                android:background="@drawable/bg_button_answer"
                app:layout_constraintBottom_toTopOf="@+id/button_restart"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_error"
            android:visibility="invisible"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/text_view_error"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/error_cant_get_q"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/secondary_text"
                android:gravity="center"
                android:padding="8dp"
                app:layout_constraintHeight_percent="0.4"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

            <Button
                android:id="@+id/button_retry"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="8dp"
                app:backgroundTint="@null"
                android:background="@drawable/bg_button_answer"
                android:layout_margin="8dp"
                android:text="@string/retry"
                android:textColor="@color/primary_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/button_end"
                android:layout_marginRight="8dp"
                android:text="@string/finish"
                android:layout_marginLeft="8dp"
                app:backgroundTint="@null"
                android:textColor="@color/primary_text"
                android:background="@drawable/bg_button_answer"
                app:layout_constraintBottom_toTopOf="@+id/button_retry"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_question"
            android:visibility="invisible"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textview_lyric"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="center"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                app:layout_constraintHeight_percent="0.4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
            <LinearLayout
                android:id="@+id/radioGroupAnswers"
                app:layout_constraintTop_toBottomOf="@+id/textview_lyric"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/button_answer_1"
                    android:padding="8dp"
                    android:textColor="@color/primary_text"
                    app:backgroundTint="@null"
                    android:background="@drawable/bg_button_answer"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/button_answer_2"
                    android:padding="8dp"
                    app:backgroundTint="@null"
                    android:textColor="@color/primary_text"
                    android:background="@drawable/bg_button_answer"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/button_answer_3"
                    android:padding="8dp"
                    app:backgroundTint="@null"
                    android:textColor="@color/primary_text"
                    android:background="@drawable/bg_button_answer"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>